@@ -1,52 +1,108 @@
 package com.codenet.codenetbackend.config;
 
+import com.codenet.codenetbackend.service.JwtValidationService;
+import jakarta.servlet.FilterChain;
+import jakarta.servlet.ServletException;
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletResponse;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.http.HttpMethod;
+import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.http.SessionCreationPolicy;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
+import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
+import org.springframework.web.filter.OncePerRequestFilter;
 
-import java.util.Arrays;
+import java.io.IOException;
+import java.util.Collections;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
 public class SecurityConfig {
+    private static final Logger log = LoggerFactory.getLogger(SecurityConfig.class);
 
-    private final ClerkAuthenticationFilter clerkAuthenticationFilter;
+    private final JwtValidationService jwtValidationService;
 
-    public SecurityConfig(ClerkAuthenticationFilter clerkAuthenticationFilter) {
-        this.clerkAuthenticationFilter = clerkAuthenticationFilter;
+    public SecurityConfig(JwtValidationService jwtValidationService) {
+        this.jwtValidationService = jwtValidationService;
     }
 
     @Bean
-    public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
+    public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
-            .csrf(csrf -> csrf.disable())
+            .csrf(csrf -> csrf.disable()) // Disable CSRF for stateless APIs
             .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+            .authorizeHttpRequests(authorize -> authorize
+                // Public endpoints (no authentication needed)
+                .requestMatchers(HttpMethod.GET, "/api/projects/**", "/api/trending", "/api/stats", "/api/featured").permitAll()
+                .requestMatchers(HttpMethod.POST, "/api/users/sync").permitAll() // For Ballerina webhook
+                .requestMatchers(HttpMethod.DELETE, "/api/users/sync/**").permitAll() // For Ballerina webhook
+                .requestMatchers("/uploads/**").permitAll() // Allow access to uploaded files
+                .requestMatchers("/error").permitAll()
+                
+                // All other API endpoints require authentication
+                .requestMatchers("/api/**").authenticated()
+                .anyRequest().permitAll() // Allow access to static files (frontend)
+            )
             .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-            .addFilterBefore(clerkAuthenticationFilter, UsernamePasswordAuthenticationFilter.class)
-            .authorizeHttpRequests(authz -> authz
-                .requestMatchers("/api/users/sync").permitAll()
-                .requestMatchers("/api/projects").permitAll()
-                .requestMatchers("/api/projects/**").permitAll()
-                .requestMatchers("/api/upload/**").permitAll()
-                .anyRequest().authenticated()
-            );
-        
+            .addFilterBefore(clerkJwtAuthenticationFilter(), UsernamePasswordAuthenticationFilter.class);
+
         return http.build();
+    }
+
+    @Bean
+    public OncePerRequestFilter clerkJwtAuthenticationFilter() {
+        return new OncePerRequestFilter() {
+            @Override
+            protected void doFilterInternal(HttpServletRequest request, HttpServletResponse response, FilterChain filterChain) throws ServletException, IOException {
+                String authHeader = request.getHeader("Authorization");
+
+                if (authHeader != null && authHeader.startsWith("Bearer ")) {
+                    String token = authHeader.substring(7);
+                    try {
+                        String clerkUserId = jwtValidationService.validateTokenAndGetUserId(token);
+                        
+                        // Store Clerk user ID in request attributes for controllers to use
+                        request.setAttribute("clerkUserId", clerkUserId);
+
+                        // Create authentication token
+                        UsernamePasswordAuthenticationToken authentication = new UsernamePasswordAuthenticationToken(
+                                clerkUserId, null, Collections.singletonList(new SimpleGrantedAuthority("USER")));
+                        SecurityContextHolder.getContext().setAuthentication(authentication);
+
+                    } catch (Exception e) {
+                        log.error("JWT authentication failed: {}", e.getMessage());
+                        response.setStatus(HttpServletResponse.SC_UNAUTHORIZED);
+                        return;
+                    }
+                }
+                filterChain.doFilter(request, response);
+            }
+        };
     }
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOriginPatterns(Arrays.asList("*"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("*"));
+        configuration.setAllowedOrigins(List.of(
+            "http://127.0.0.1:5500", 
+            "http://localhost:5500",
+            "http://localhost:8080",
+            "http://127.0.0.1:8080"
+        ));
+        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        configuration.setAllowedHeaders(List.of("*"));
         configuration.setAllowCredentials(true);
         
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
